# HyperTools

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Dockerfile  README.md  autoencoder_U20_model.onnx  builder.ui~  cubert_example.cpp  cuda_cubert_example.cu  cuda_example.cu  feature_tool.cpp  feature_tool.ui  ground_truth_example.cpp  gtk_cuda_example.cu  gtkfunctions.cpp  gtkfunctions.h  gtkfunctions_gpu.cpp  hyperfunctions.cpp  hyperfunctions.h  hypergpufunctions.cu  hypergpufunctions.h  image_tool.cpp  image_tool.ui  image_tool.ui~  img_analysis.py  installation_instructions2004.txt  segmentation.ui  segmentation.ui~  semantic_segmentation.cpp  spectral_model.pth  test.cpp  test.ui
.devcontainer/: devcontainer.json
Calibration/: calibration.py
Docker/: CMakeCache.txt  Dockerfile_4_2_OpenCV  Dockerfile_4_2_OpenCV_cuda  Dockerfile_cpu_torch  Dockerfile_cubert  Dockerfile_cubert_cuda  Dockerfile_cubert_test  Dockerfile_cuda_ML  Dockerfile_cuda_ONNX  Dockerfile_cuda_lightglue  Dockerfile_cuda_torch  Dockerfile_current_OpenCV  Makefile  cmake_install.cmake  dimension_reduction  feature_tool  ground_truth_example  image_tool  semantic_interface
Documentation/: Docker.md  Ground_Truth.md  Image_Tool.md  Semantic_Segmentation.md  cubert_example.md
UI/: #image_tool.ui#  feature_tool.ui  image_tool.ui  segmentation.ui
cmake-modules/: OpenCVConfig.cmake
examples/: CMakeCache.txt  HyperDinoV2.ipynb  Makefile  RGBDenseMatching.ipynb  ReferenceSpectraPlotter.py  SSIFT.cpp  SSItest.cpp  SparseMatchingDinov2.ipynb  autoencoder.ipynb  calibration.py  channel_resizer.py  cmake_install.cmake  cubert_example.cpp  cubert_export_tiff.cpp  cuda_cubert_example.cu  cuda_example.cu  deeplab_example.cpp  dimension_reduction.cpp  dinov2.ipynb  feature_testing.cpp  feature_tool  feature_tool.cpp  ground_truth_example  ground_truth_example.cpp  ground_truth_example_envi.cpp  ground_truth_results.py  gtk_cuda_example.cu  image_tool  image_tool.cpp  intrinsic_calibration.py  light_glue.py  real_time_class.cu  segment_anything_example.py  segmentation_training_head.ipynb  semantic_interface  semantic_segmentation.cpp  sift.cpp  spectral_autoencoder.ipynb  test_cubert.py  test_envi_read.cpp  (+2 more)
filter/: filter.py  ratio.cpp
images/: pan1.tiff  pan2.tiff
json/: Rock  camera_database.json  file.json  lena3.json  lena4.json  lib_hsi.json  r  spectral_databas2.json  spectral_database1.json  spectral_database_U20.json  spectral_database_U5.json  spectral_database_gt.json
opencv_build/opencv-4.2.0/: Descriptor1.c  Descriptor1.cpp
settings/ultris20/: init.daq  ultris20.settings
settings/ultris5/: init.daq  ultris5.settings
src/: SSItest.cpp  ctpl.h  gtkfunctions.cpp  gtkfunctions.h  gtkfunctions_gpu.cpp  hypercuvisfunctions.cpp  hypercuvisfunctions.h  hyperfunctions.cpp  hyperfunctions.h  hypergpufunctions.cu  hypergpufunctions.h  spectralsimalgorithms.cpp  spectralsimalgorithms.h
